--- a/popup.html
+++ b/popup.html
@@ -66,7 +66,7 @@
 
     .text {
       word-break: break-all;
-      margin-right: 28px;
+      margin-right: 70px;
       color: #212529;
       line-height: 1.5;
       font-size: 0.9rem;
@@ -102,9 +102,34 @@
       align-items: center;
       justify-content: center;
       opacity: 0;
-      transition: opacity 0.2s ease-in-out, background-color 0.2s ease-in-out;
+      transition: opacity 0.2s ease-in-out;
     }
 
+    .copy-btn {
+      position: absolute;
+      top: 8px;
+      right: 36px;
+      background: #28a745;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      padding: 4px 8px;
+      cursor: pointer;
+      font-size: 12px;
+      display: block;
+      align-items: center;
+      justify-content: center;
+      height: 22px;
+      z-index: 1;
+      opacity: 0;
+      transition: opacity 0.2s ease-in-out;
+    }
+
+    .copy-btn:hover {
+      background: #218838;
+    }
+
+    .copy-item:hover .copy-btn,
     .copy-item:hover .clear-btn {
       opacity: 1;
     }
